Update project to latest tag old-cryptolibrary-2.5.0